# staccato

./: .gitignore  .project  CMakeLists.txt  README.md  gitignore.txt  pom.xml  staccato.qrc
scripts/: downloader.py  fetcher.py  main.py
src/: CMakeLists.txt  Test.java  app_manager.cpp  audio_file_image_provider.cpp  interface_to_qt.cpp  main.cpp  playlist.cpp  playlist_tree.cpp  qml_interface.cpp  tests.cpp  track.cpp  track_manager.cpp  util.cpp
src/gui/: BottomPanel.java  CurrentTrackInfoPanel.java  GUIUtil.java  InputPanel.java  MainPanel.java  PlaybarPanel.java  PlaylistPanel.java  QueuePanel.java  StaccatoWindow.java  TracklistPanel.java  WrapLayout.java
src/headers/: file_manager.h  playlist.hpp  track.hpp
src/include/: app_manager.hpp  audio_file_image_provider.hpp  file_manager.hpp  interface_to_qt.hpp  playlist.hpp  playlist_tree.hpp  qml_interface.hpp  tests.hpp  track.hpp  track_manager.hpp  util.hpp
src/main/: APIKeysStorage.java  BottomPanel.java  Downloader.java  FileManager.java  InputPanel.java  Installer.java  InstallerWindow.java  JavaLink.java  MainPanel.java  MusicFetcher.java  Playlist.java  SpotipyException.java  StaccatoTrack.java  StaccatoWindow.java  Testing.java  Track.java  TracklistPlayer.java  downloader.py  fetcher.py  file_manager.cpp  main.cpp  playlist.cpp  python_link.py  tests.cpp  track.cpp  track_manager.cpp  util.cpp
src/main/resources/themes/: FlatDarkLaf.properties
src/python/: downloader.py  fetcher.py
src/staccato/: Testing.java
src/ui/: ArtworkTextButton.qml  ControlBarPanel.qml  ControlPanel.qml  CurrentlyPlayingPanel.qml  Dialogs.qml  ExtraParametersEditor.qml  FilePicker.qml  HelpToolTip.qml  HomePanel.qml  HomePanelArtistsTextField.qml  ItemButtonPanel.qml  LabeledIconButton.qml  LibraryPanel.qml  Main.qml  MainPanel.qml  MetadataImportPanel.qml  Playbar.qml  QueuePanel.qml  RightPanel.qml  RoundButton.qml  RoundCheckBox.qml  RoundImage.qml  RoundRadioButton.qml  RoundTabButton.qml  RoundTextField.qml  RoundedImage.qml  SearchQueryImportPanel.qml  Style.qml  TrackInfoEditor.qml  TracklistPanel.qml  URLImportPanel.qml  homePanel.js  homePanel.mjs  libraryPanel.js  libraryPanel.mjs  main.js  main.mjs  main.qml  trackImporter.js  trackImporter.mjs  (+1 more)
temp/: How ＂Like Him＂ by Tyler The Creator ft. Lola Young was made [K4JZYlLNcz8].info.json  Kanye West - Runaway (Full-length Film) [Jg5wkZ-dJXA].info.json  Kanye West - Runaway (Lyrics) ft. Pusha T [4TVT7IOqH1Y].info.json  Kanye West - Runaway (Video Version) ft. Pusha T [Bm5iA4Zupek].info.json  Kanye West - Runaway ft. Pusha T [Explicit⧸Dirty] [Long version] #explicit #extended [mqpwDJpI3Rc].info.json  LE SSERAFIM (르세라핌) 'Perfect Night' (Color Coded Lyrics) [bagucl7jjiM].info.json  LE SSERAFIM (르세라핌) 'Perfect Night' OFFICIAL M⧸V with OVERWATCH 2 (Choreography ver.) [oKBwWQI-IoI].info.json  LE SSERAFIM (르세라핌) 'Perfect Night' OFFICIAL M⧸V with OVERWATCH 2 [hLvWy2b857I].info.json  Like Him [dgUHE8wWhiE].info.json  Perfect Night [OkYj93iDQyI].info.json  Runaway [EMnQwBTJnMM].info.json  Tyler, The Creator - Like Him (8D Audio) ft. Lola Young [ncoXhzButxQ].info.json  Tyler, The Creator - Like Him (Lyrics Video) ft. Lola Young [qicbVqvcvNY].info.json  Tyler, The Creator - Like Him (Lyrics) - ＂Mama I'm chasin' a ghost, do I look like him？＂ [O9Kik2PiSNs].info.json  [BE ORIGINAL] LE SSERAFIM(르세라핌) 'Perfect Night' (4K) [6AOjwLeMKfk].info.json  tyler the creator - like him (but it’s the best part & looped) [4uXyrUNE5iM].info.json
